<resources>
    <string name="app_name">MiSUMi</string>
    <string name="chinese_currency">¥</string>

    //login activity
    <string name="username_error">Username cannot be empty.</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="login_success">Login Success</string>
    <string name="invalid_login">Invalid Credentials</string>

    //login view
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_forgot_password">Forgot Your Password</string>

    //cart activity
    <string name="txt_cart">Cart</string>
    <string name="txt_total">Total : </string>

    //settings activity
    <string name="txt_settings">Settings</string>
    <string name="txt_language">Language</string>

    //item detail activity
    <string name="txt_purchase_successful">Purchase Successful</string>
    <string name="txt_item_not_available">Item is not available</string>
    <string name="txt_shipping">Shipping</string>
    <string name="txt_condition">Condition</string>
    <string name="txt_condition_new">New</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_100_available">100 available</string>
    <string name="txt_brand">Brand</string>
    <string name="txt_na">NA</string>
    <string name="txt_manufacture_country">Country Of Manufacture</string>
    <string name="txt_china">China</string>
    <string name="txt_upc">UPC</string>
    <string name="txt_item_number">Item Number</string>
    <string name="txt_about_the_seller">About the seller</string>
    <string name="txt_misumi">MISUMI</string>

    <string name="card_number_empty">Card Number can\'t be empty</string>
    <string name="card_cvc_empty">Card CVC can\'t be empty</string>
    <string name="expiry_month_empty">Expiry Month can\'t be empty</string>
    <string name="expiry_year_empty">Expiry Year can\'t be empty</string>

    //item detail presenter
    <string name="txt_item_removed">Item removed from your cart</string>
    <string name="txt_item_added">Item added to your cart</string>

    <string name="make_payment">Make Payment</string>
    <string name="invalid_card_credentials">Invalid card Credentials</string>
    <string name="payment_successfull">Payment Successful</string>
    <string name="full_name">Full Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_cvc">Card CVC</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="verify_payment">VERIFY PAYMENT</string>

    <string name="manas_shrestha">MISUMI</string>

    <string name="payment">Payment</string>


    <!-- Navigation Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Wire</item>
        <item>Control</item>
        <item>Knife and Tools</item>
        <item>Settings</item>
    </string-array>


    <string name="card_name">Yun Zhu</string>
    <string name="card_email">yun.zhu@misumi.sh.cn</string>
    <string name="card_number_valid">4242424242424242</string>
    <string name="card_cvc_valid">123</string>
    <string name="card_expiry_month">12</string>
    <string name="card_expiry_year">17</string>

</resources>
